apps/syncthing-storage-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
spec:
  ports:
    - port: 8384
      targetPort: 8384
  type: ExternalName
  externalName: 192.168.10.20
